--- a/Livrables/Livrable 1.ipynb
+++ b/Livrables/Livrable 1.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "[20640 rows x 10 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,24 +349,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.preprocessing import OrdinalEncoder\n",
-    "\n",
-    "# 2. Normaliser les données\n",
-    "def normalize_data(housing_cat):\n",
-    "    ordinal_encoder = OrdinalEncoder()\n",
-    "    housing_cat_encoded = ordinal_encoder.fit_transform(housing_cat)\n",
-    "    return housing_cat_encoded"
+    "### Nettoyer les données"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -394,9 +386,366 @@
     }
    ],
    "source": [
-    "normalized_housing = normalize_data(housing[[\"ocean_proximity\"]])\n",
-    "housing[\"ocean_proximity\"] = normalized_housing\n",
     "housing.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On remarque que les données de ``total_bedrooms`` contiennent des valeurs manquantes. 20433 sur 20640. On a donc le choix :\n",
+    "- Supprimer l'instance\n",
+    "- Supprimer la _feature_\n",
+    "- Remplacer par une valeur (0, médiane, _etc_.)\n",
+    "\n",
+    "Il n'y a pas de réponse unique, car la façon dont les valeurs manquantes sont traitées dépend du type de données et de l'analyse effectuée. Dans certains cas, remplacer les valeurs manquantes par la médiane peut être une meilleure option que de les supprimer. Voici quelques points à considérer pour prendre cette décision :\n",
+    "\n",
+    "1. La fréquence des valeurs manquantes : Si le nombre de valeurs manquantes est important dans le jeu de données, la suppression de ces valeurs peut réduire considérablement la taille de votre jeu de données. Dans ce cas, il peut être préférable de remplacer les valeurs manquantes par la médiane plutôt que de les supprimer.\n",
+    "\n",
+    "1. Le type de données : Le remplacement des valeurs manquantes par la médiane est particulièrement approprié pour les données numériques, car la médiane est une mesure de tendance centrale robuste qui n'est pas affectée par les valeurs aberrantes. Pour les données catégorielles, la suppression des valeurs manquantes peut être préférable.\n",
+    "\n",
+    "1. L'impact sur l'analyse : Le remplacement des valeurs manquantes par la médiane peut modifier la distribution des données, ce qui peut avoir un impact sur l'analyse. Dans certains cas, cela peut être souhaitable, mais dans d'autres cas, cela peut affecter la validité des résultats.\n",
+    "\n",
+    "En résumé, remplacer les valeurs manquantes par la médiane peut être une bonne option dans certains cas, mais pas dans tous les cas. Il est important de considérer la fréquence des valeurs manquantes, le type de données et l'impact sur l'analyse avant de prendre une décision.\n",
+    "\n",
+    "> Pour notre jeu de données, puisque supprimer des données pourrait perdre des informations importantes, nous allons remplacer les valeurs manquantes par la médiane."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.impute import SimpleImputer\n",
+    "imputer = SimpleImputer(strategy=\"median\")\n",
+    "\n",
+    "housing_cleaned = housing.select_dtypes(include=[np.number])\n",
+    "imputer.fit(housing_cleaned)\n",
+    "\n",
+    "X = imputer.transform(housing_cleaned)\n",
+    "housing_cleaned = pd.DataFrame(X, columns=housing_cleaned.columns, index=housing_cleaned.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 20640 entries, 0 to 20639\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column              Non-Null Count  Dtype  \n",
+      "---  ------              --------------  -----  \n",
+      " 0   longitude           20640 non-null  float64\n",
+      " 1   latitude            20640 non-null  float64\n",
+      " 2   housing_median_age  20640 non-null  float64\n",
+      " 3   total_rooms         20640 non-null  float64\n",
+      " 4   total_bedrooms      20640 non-null  float64\n",
+      " 5   population          20640 non-null  float64\n",
+      " 6   households          20640 non-null  float64\n",
+      " 7   median_income       20640 non-null  float64\n",
+      " 8   median_house_value  20640 non-null  float64\n",
+      " 9   ocean_proximity     20640 non-null  float64\n",
+      "dtypes: float64(10)\n",
+      "memory usage: 1.6 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "housing_cleaned.info()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Supprimer les valeurs dupliquées"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_cleaned = housing_cleaned.drop_duplicates()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Numériser les données\n",
+    "Les données sont numérisées pour pouvoir être traitées par l'algorithme K-means. C'est à dire que les données sont transformées en nombres."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "\n",
+    "def numerize_cat(cat):\n",
+    "    cat_encoder = OneHotEncoder()\n",
+    "    return cat_encoder.fit_transform(cat).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "housing_cleaned[\"ocean_proximity\"] = numerize_cat(housing[[\"ocean_proximity\"]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>median_house_value</th>\n",
+       "      <th>ocean_proximity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-122.23</td>\n",
+       "      <td>37.88</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>880.0</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>322.0</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>8.3252</td>\n",
+       "      <td>452600.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-122.22</td>\n",
+       "      <td>37.86</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>7099.0</td>\n",
+       "      <td>1106.0</td>\n",
+       "      <td>2401.0</td>\n",
+       "      <td>1138.0</td>\n",
+       "      <td>8.3014</td>\n",
+       "      <td>358500.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-122.24</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1467.0</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>496.0</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>7.2574</td>\n",
+       "      <td>352100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1274.0</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>558.0</td>\n",
+       "      <td>219.0</td>\n",
+       "      <td>5.6431</td>\n",
+       "      <td>341300.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-122.25</td>\n",
+       "      <td>37.85</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>1627.0</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>565.0</td>\n",
+       "      <td>259.0</td>\n",
+       "      <td>3.8462</td>\n",
+       "      <td>342200.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20635</th>\n",
+       "      <td>-121.09</td>\n",
+       "      <td>39.48</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>1665.0</td>\n",
+       "      <td>374.0</td>\n",
+       "      <td>845.0</td>\n",
+       "      <td>330.0</td>\n",
+       "      <td>1.5603</td>\n",
+       "      <td>78100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20636</th>\n",
+       "      <td>-121.21</td>\n",
+       "      <td>39.49</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>697.0</td>\n",
+       "      <td>150.0</td>\n",
+       "      <td>356.0</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>2.5568</td>\n",
+       "      <td>77100.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20637</th>\n",
+       "      <td>-121.22</td>\n",
+       "      <td>39.43</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>2254.0</td>\n",
+       "      <td>485.0</td>\n",
+       "      <td>1007.0</td>\n",
+       "      <td>433.0</td>\n",
+       "      <td>1.7000</td>\n",
+       "      <td>92300.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20638</th>\n",
+       "      <td>-121.32</td>\n",
+       "      <td>39.43</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1860.0</td>\n",
+       "      <td>409.0</td>\n",
+       "      <td>741.0</td>\n",
+       "      <td>349.0</td>\n",
+       "      <td>1.8672</td>\n",
+       "      <td>84700.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20639</th>\n",
+       "      <td>-121.24</td>\n",
+       "      <td>39.37</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>2785.0</td>\n",
+       "      <td>616.0</td>\n",
+       "      <td>1387.0</td>\n",
+       "      <td>530.0</td>\n",
+       "      <td>2.3886</td>\n",
+       "      <td>89400.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>20640 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "0        -122.23     37.88                41.0        880.0           129.0   \n",
+       "1        -122.22     37.86                21.0       7099.0          1106.0   \n",
+       "2        -122.24     37.85                52.0       1467.0           190.0   \n",
+       "3        -122.25     37.85                52.0       1274.0           235.0   \n",
+       "4        -122.25     37.85                52.0       1627.0           280.0   \n",
+       "...          ...       ...                 ...          ...             ...   \n",
+       "20635    -121.09     39.48                25.0       1665.0           374.0   \n",
+       "20636    -121.21     39.49                18.0        697.0           150.0   \n",
+       "20637    -121.22     39.43                17.0       2254.0           485.0   \n",
+       "20638    -121.32     39.43                18.0       1860.0           409.0   \n",
+       "20639    -121.24     39.37                16.0       2785.0           616.0   \n",
+       "\n",
+       "       population  households  median_income  median_house_value  \\\n",
+       "0           322.0       126.0         8.3252            452600.0   \n",
+       "1          2401.0      1138.0         8.3014            358500.0   \n",
+       "2           496.0       177.0         7.2574            352100.0   \n",
+       "3           558.0       219.0         5.6431            341300.0   \n",
+       "4           565.0       259.0         3.8462            342200.0   \n",
+       "...           ...         ...            ...                 ...   \n",
+       "20635       845.0       330.0         1.5603             78100.0   \n",
+       "20636       356.0       114.0         2.5568             77100.0   \n",
+       "20637      1007.0       433.0         1.7000             92300.0   \n",
+       "20638       741.0       349.0         1.8672             84700.0   \n",
+       "20639      1387.0       530.0         2.3886             89400.0   \n",
+       "\n",
+       "       ocean_proximity  \n",
+       "0                  0.0  \n",
+       "1                  0.0  \n",
+       "2                  0.0  \n",
+       "3                  0.0  \n",
+       "4                  0.0  \n",
+       "...                ...  \n",
+       "20635              0.0  \n",
+       "20636              0.0  \n",
+       "20637              0.0  \n",
+       "20638              0.0  \n",
+       "20639              0.0  \n",
+       "\n",
+       "[20640 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing_cleaned"
    ]
   },
   {
@@ -420,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
