maj: recap video pipeline

--- a/Révision_droite_régression_linéaire.ipynb
+++ b/Révision_droite_régression_linéaire.ipynb
@@ -81,6 +81,95 @@
     "\n",
     "<div style=\"text-align:center\"><img src=\"Droite_regression_exemple.png\" width=30%/></div>"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculer le vecteur d'erreur :\n",
+    "$$\\hat{w} = \\left[ \\begin{array}{c}\n",
+    "\\frac{2}{3} \\\\\n",
+    "\\frac{1}{2}\n",
+    "\\end{array} \\right],\\ X = \\left[ \\begin{array}{cc}\n",
+    "1 & 1 \\\\\n",
+    "1 & 2 \\\\\n",
+    "1 & 3\n",
+    "\\end{array} \\right],\\ y = \\left[ \\begin{array}{c}\n",
+    "1 \\\\\n",
+    "2 \\\\\n",
+    "2\n",
+    "\\end{array} \\right]$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Projections :\n",
+    "$$P = X \\hat{w} = \\left[ \\begin{array}{cc}\n",
+    "1 & 1 \\\\\n",
+    "1 & 2 \\\\\n",
+    "1 & 3\n",
+    "\\end{array} \\right] \\left[ \\begin{array}{c}\n",
+    "\\frac{2}{3} \\\\\n",
+    "\\frac{1}{2}\n",
+    "\\end{array} \\right] = \\left[ \\begin{array}{c}\n",
+    "\\frac{7}{6} \\\\\n",
+    "\\frac{5}{3} \\\\\n",
+    "\\frac{13}{6}\n",
+    "\\end{array} \\right]$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$e = y - \\hat{y} = y - X \\hat{w} = \\left[ \\begin{array}{c}\n",
+    "1 \\\\\n",
+    "2 \\\\\n",
+    "2\n",
+    "\\end{array} \\right] - \\left[ \\begin{array}{c}\n",
+    "\\frac{7}{6} \\\\\n",
+    "\\frac{5}{3} \\\\\n",
+    "\\frac{13}{6}\n",
+    "\\end{array} \\right] = \\left[ \\begin{array}{c}\n",
+    "- \\frac{1}{6} \\\\\n",
+    "\\frac{2}{3} \\\\\n",
+    "- \\frac{1}{6}\n",
+    "\\end{array} \\right]$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:center\"><img src=\"droite_represantation_erreur.png\" width=30%/></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Le problème avec les droites polynomiales\n",
+    "## Comment choisir les *hyperparamètres* ?\n",
+    "### K-Fold Cross Validation : Pseudo-code\n",
+    "\n",
+    "**K-Fold cross validation**\n",
+    "* pour chaque *hyperparamètre* :\n",
+    "    * pour $i=1$:$k$ :\n",
+    "        * entrainer le model sur tous les points sauf les $i$-ème\n",
+    "        * évaluer le model sur les $i$-ème points\n",
+    "* choisir l'*hyperparamètre* avec la meilleure moyenne de performance\n",
+    "\n",
+    "* $k$ lui même est un *hyperparamètre* mais il est souvent fixé à 4 ou 10.\n",
+    "\n",
+    "## Sensibilité du model"
+   ]
   }
  ],
  "metadata": {
