maj: note taking and WS

--- a/Révision_droite_régression_linéaire.ipynb
+++ b/Révision_droite_régression_linéaire.ipynb
@@ -170,6 +170,151 @@
     "\n",
     "## Sensibilité du model"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ridge Regularisation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "    \\underbrace{ \\underset{\\omega} \\min || X\\omega - y ||_2^2 }_{\\substack{\\text{Trained error}}} + \\underbrace{\\lambda || \\omega ||_2^2}_{\\substack{\\text{Keep weights small}}} \\\\\n",
+    "    \\lambda\n",
+    "$ est un *hyperparamètre*."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Régression logistique"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pour estimer la propabilité d'appartenance à une classe. Donc des valeurs numériques entre 0 et 1.\n",
+    "\n",
+    "Généralement utilisé pour la classification binaire.\n",
+    "\n",
+    "Appartient au modèles discriminatifs.\n",
+    "\n",
+    "$\\sigma(z) = \\frac{1}{1 + e^{-z}}$\n",
+    "\n",
+    "<div style=\"text-align:center\"><img src=\"regrassion_logistique.png\" width=30%/></div>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On commence avec :\n",
+    "* Une régression linéaire $\\omega^T X$\n",
+    "* Le résultat est transformé en probabilité par la fonction $\\sigma$. Le *Sigmoid*\n",
+    "\n",
+    "*Sigmoid* est utilisé pour estimé une distribution de probabilité. Une distribution de Bernoulli.\n",
+    "$$P(\\hat{Y} = 1|x,\\omega) = s(\\omega^T x),\\ P(\\hat{Y} = 0|x,\\omega) = 1 - s(\\omega^T x)$$\n",
+    "Ici $s$ est la fonction *Sigmoid*."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On veut donc maximiser la vraisemblance de nos données noté $X$ :\n",
+    "$$\\begin{aligned}\n",
+    "\\hat{y} &= \\underset{k}\\max P(\\hat{Y} = k|x,\\omega)\n",
+    "&= \\left\\{ \\begin{array}{c} 1 \\text{ si } s(\\omega^T x) \\geqq 0.5 \\\\\n",
+    " 0 \\text{ sinon} \\end{array} \\right.\n",
+    "\\end{aligned}$$\n",
+    "\n",
+    "Une notation équivalente est :\n",
+    "$$\\hat{y} = \\left\\{ \\begin{array}{c} 1 \\text{ si } \\omega^T x > 0 \\\\\n",
+    " 0 \\text{ sinon} \\end{array} \\right.$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Résumé régression et fonction perte"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fonctions régresssion"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Linéaire : $h(x; \\omega, \\alpha) = \\omega . x + \\alpha$\n",
+    "* Polynomiale\n",
+    "    * Équivalent à la régression linéaire sous forme de polynôme\n",
+    "* Logistique : h(x; \\omega, \\alpha) = $s(\\omega . x + \\alpha), \\\\ s(\\gamma) = \\frac{1}{1 + e^{- \\gamma}} $"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Foncitons d'erreur"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Squared Error : $L(z,y) = (z - y)^2$\n",
+    "* Absolute Error : $L(z,y) = |z - y|$\n",
+    "* Logistique aka Cross Entropy : $L(z,y) = -y \\log(z) - (1 - y) \\log(1 - z)$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "MAE : Mean Absolute Error c'est OLS\n",
+    "\n",
+    "RMSE : Root Mean Squared Error c'est Ridge"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La somme des moindres carrés est très sensible aux outliers (données aberrantes). Donc pas d'OLS."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align:center\"><img src=\"tendance_droite.png\" width=40%/></div>"
+   ]
   }
  ],
  "metadata": {
