--- a/Projet/ethique_des_données.ipynb
+++ b/Projet/ethique_des_données.ipynb
@@ -1,10 +1,11 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Étude de l'étique des données"
+    "# Étude de l'éthique des données"
    ]
   },
   {
