maj: ethic study

--- a/Projet/ethique_des_données.ipynb
+++ b/Projet/ethique_des_données.ipynb
@@ -30,6 +30,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Qu'est-ce que l'éthique des données ?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* RGPD : Règlement Général sur la Protection des Données\n",
+    "* Discrimination : Lorsqu'une personne est traitée différemment en raison de son origine, de son sexe, de son âge, de son handicap, de son orientation sexuelle, de son identité de genre, de son état matrimonial, de sa situation familiale, de sa religion ou de ses croyances, de son appartenance à une ethnie ou à une nation, de son appartenance à une organisation syndicale, de son appartenance à un parti politique ou de ses opinions politiques."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Données du service des ressources humaines"
    ]
   },
@@ -86,6 +103,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Évaluation de la pertinence des données et leur éthique"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|Pas utile|Pas éthique|\n",
+    "|:-|:-|\n",
+    "|\"Over18\"|Supprimer les personne de moins de 18 ans (cf. RGPD)|\n",
+    "|\"EducationField\"|\"Gender\" => peu porter à la discrimination|\n",
+    "|\"EmployeeCount\" = 0|\"MaritalStatus\" => peu porter à la discrimination|\n",
+    "|~\"StockOptionLevel\"||"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Dernière évaluation du manager"
    ]
   },
@@ -115,6 +153,22 @@
     "|EmployeeID|l'identifiant d'un employé|entier|Non|1, 2, ...|\n",
     "|JobInvolvement|Une évaluation de son implication dans son travail|entier|Non| 1 ('Faible'), 2 (\"Moyenne\"), 3 (\"Importante\") ou 4 (\"Très importante\")|\n",
     "|PerformanceRating|Une évaluation de son niveau de performance annuel pour l'entreprise|entier|Non| 1 ('Faible'), 2 (\"Bon\"), 3 (\"Excellent\") ou 4 (\"Au delà des attentes\")|"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Évaluation de la pertinence des données et leur éthique"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les données de ce fichier sont pertinentes et éthiques."
    ]
   },
   {
@@ -161,6 +215,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Évaluation de la pertinence des données et leur éthique"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les données de ce fichier sont pertinentes et éthiques."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Horaires de travail"
    ]
   },
@@ -198,7 +268,7 @@
     "|Label|Description|Type de data|Nullable|Exemple|\n",
     "|:--|:--|:--|:--|:--|\n",
     "|EmployeeID|l'identifiant d'un employé|entier|Non|1, 2, ...|\n",
-    "|2015-01-01 <br/>2015-01-02 <br/> ...|Date de l'entrée|date heure|Oui|2015-01-02 09:43:45, 2015-01-02 09:44:45, ...|"
+    "|2015-01-01 <br/>2015-01-02 <br/> ...|Date et heure de l'entrée|date heure|Oui|2015-01-02 09:43:45, 2015-01-02 09:44:45, ...|"
    ]
   },
   {
@@ -217,7 +287,23 @@
     "|Label|Description|Type de data|Nullable|Exemple|\n",
     "|:--|:--|:--|:--|:--|\n",
     "|EmployeeID|l'identifiant d'un employé|entier|Non|1, 2, ...|\n",
-    "|2015-01-01 <br/>2015-01-02 <br/> ...|Date de l'entrée|date heure|Oui|2015-01-02 09:43:45, 2015-01-02 09:44:45, ...|"
+    "|2015-01-01 <br/>2015-01-02 <br/> ...|Date et heure de la sortie|date heure|Oui|2015-01-02 09:43:45, 2015-01-02 09:44:45, ...|"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Évaluation de la pertinence des données et leur éthique"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les données de ce fichier sont pertinentes et éthiques."
    ]
   }
  ],
