maj: Add part about what ethic is

--- a/Projet/ethique_des_données.ipynb
+++ b/Projet/ethique_des_données.ipynb
@@ -47,6 +47,117 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Les systèmes d'IA doivent être développés et utilisés pour le bien commun :"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "L'IA doit être utilisée pour créer une société juste et inclusive, en répondant aux défis sociétaux et environnementaux, et en améliorant la qualité de vie des personnes. L'IA doit être conçue pour résoudre des problèmes spécifiques, plutôt que d'être utilisée à des fins nuisibles ou malveillantes."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### L'IA doit être fiable et sûre :"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les systèmes d'IA doivent être conçus de manière à fonctionner de manière fiable et sûre, en minimisant les risques pour les utilisateurs et l'environnement. Ils doivent être capables de détecter et de résoudre les erreurs, de prévenir les failles de sécurité et de maintenir leur fonctionnement dans des conditions imprévues."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Les systèmes d'IA doivent être transparents :"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les décisions prises par les systèmes d'IA doivent être compréhensibles et explicables pour les utilisateurs et les parties prenantes. Les utilisateurs doivent être informés de la façon dont les systèmes d'IA prennent des décisions et comment les données sont collectées et traitées."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Les systèmes d'IA doivent être soumis à une gouvernance appropriée :"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les systèmes d'IA doivent être soumis à des normes et des réglementations appropriées pour garantir leur conformité avec les valeurs, les droits et les réglementations en vigueur. Les responsables de la mise en œuvre et de l'utilisation des systèmes d'IA doivent être identifiables et responsables."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Les systèmes d'IA doivent respecter la vie privée et les données personnelles :"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les systèmes d'IA doivent être conçus de manière à garantir le respect de la vie privée et des données personnelles des utilisateurs. Les données doivent être collectées et traitées de manière responsable et transparente, et les utilisateurs doivent avoir un certain contrôle sur leurs données."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Les systèmes d'IA doivent être conçus pour garantir l'équité :"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les systèmes d'IA doivent être conçus pour garantir l'équité et l'inclusion, en évitant les biais ou la discrimination. Ils doivent respecter la diversité et l'égalité de traitement, en particulier en ce qui concerne les groupes vulnérables ou discriminés."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Les systèmes d'IA doivent être utilisés pour renforcer la responsabilité et la sécurité :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Les systèmes d'IA doivent être conçus pour renforcer la responsabilité et la sécurité, en minimisant les risques pour les utilisateurs et en facilitant la détection des erreurs ou des actes malveillants. Ils doivent être conformes aux normes de sécurité et de protection des données, et permettre la traçabilité et la responsabilité."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Données du service des ressources humaines"
    ]
   },
