maj: Exemple Pipeline

--- a/Projet/pipeline.ipynb
+++ b/Projet/pipeline.ipynb
@@ -5,7 +5,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pipeline\n",
+    "# Pré-traitement des données\n",
+    "Voici quelques étapes à suivre pour pré-traiter les données pour une utilisation avec K-means :\n",
+    "\n",
+    "1. Intégration des données : Intégrez les données des différentes sources en une seule source de données. Si vous travaillez avec des données provenant de plusieurs sources, vous devez les intégrer en une seule source de données. Cela vous permettra de traiter les données comme une seule entité et de les analyser plus facilement.\n",
+    "\n",
+    "1. Nettoyer les données : Assurez-vous que vos données sont propres et ne contiennent pas de valeurs manquantes, de doublons ou d'autres anomalies. Si nécessaire, supprimez ou remplacez les données manquantes.\n",
+    "\n",
+    "2. Normaliser les données : Normalisez les données en les mettant à l'échelle de sorte que chaque variable ait une plage de valeurs comparable. La normalisation peut être effectuée en utilisant la méthode de la moyenne et de l'écart type, la méthode de la plage ou la méthode de la normalisation de l'amplitude.\n",
+    "\n",
+    "3. Réduire la dimensionnalité : Si vous travaillez avec des données à haute dimensionnalité, utilisez des techniques de réduction de dimensionnalité telles que l'analyse en composantes principales (PCA) pour réduire la dimensionnalité de vos données et faciliter leur analyse.\n",
+    "\n",
+    "4. Identifier les valeurs aberrantes : Les valeurs aberrantes peuvent fausser les résultats de K-means, il est donc important de les identifier et de les traiter correctement. Les valeurs aberrantes peuvent être supprimées ou remplacées par des valeurs plus appropriées.\n",
+    "\n",
+    "5. Sélectionner les caractéristiques : Si vous travaillez avec des données qui contiennent de nombreuses caractéristiques, il peut être judicieux de sélectionner les caractéristiques les plus pertinentes pour votre analyse.\n",
+    "\n",
+    "En résumé, le pré-traitement des données pour K-means comprend le nettoyage des données, la normalisation des données, la réduction de la dimensionnalité, l'identification et le traitement des valeurs aberrantes et la sélection des caractéristiques. En effectuant ces étapes, vous pouvez améliorer la qualité de vos données et obtenir des résultats plus significatifs à l'aide de K-means."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pipeline\n",
     "La pipeline fait référence à un ensemble d'étapes ou de processus qui sont exécutés séquentiellement pour traiter les données d'entrée, extraire des caractéristiques, entraîner le modèle et prédire les résultats."
    ]
   },
@@ -343,6 +366,66 @@
    "metadata": {},
    "source": [
     "### Normalisation des données"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "\n",
+    "# index pour chaque colonne\n",
+    "rooms_ix, bedrooms_ix, population_ix, household_ix = 3, 4, 5, 6\n",
+    "\n",
+    "class CombinedAttributesAdder(BaseEstimator, TransformerMixin):\n",
+    "    def __init__(self, add_bedrooms_per_room = True): # no *args or **kargs\n",
+    "        self.add_bedrooms_per_room = add_bedrooms_per_room\n",
+    "    def fit(self, X, y=None):\n",
+    "        return self  # nothing else to do\n",
+    "    def transform(self, X, y=None):\n",
+    "        rooms_per_household = X[:, rooms_ix] / X[:, household_ix]\n",
+    "        population_per_household = X[:, population_ix] / X[:, household_ix]\n",
+    "        if self.add_bedrooms_per_room:\n",
+    "            bedrooms_per_room = X[:, bedrooms_ix] / X[:, rooms_ix]\n",
+    "            return np.c_[X, rooms_per_household, population_per_household,\n",
+    "                         bedrooms_per_room]\n",
+    "        else:\n",
+    "            return np.c_[X, rooms_per_household, population_per_household]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "\n",
+    "num_pipeline = Pipeline([\n",
+    "        ('imputer', SimpleImputer(strategy=\"median\")),\n",
+    "        ('attribs_adder', CombinedAttributesAdder()),\n",
+    "        ('std_scaler', StandardScaler()),\n",
+    "    ])\n",
+    "train_set_num = train_set.select_dtypes(include=[np.number]) # or housing.select_dtypes(exclude=[\"object\"])\n",
+    "train_set_num_tr = num_pipeline.fit_transform(train_set_num)\n",
+    "\n",
+    "num_attribs = list(train_set_num)\n",
+    "cat_attribs = [\"ocean_proximity\"]\n",
+    "\n",
+    "full_pipeline = ColumnTransformer([\n",
+    "        (\"num\", num_pipeline, num_attribs),\n",
+    "        (\"cat\", OneHotEncoder(), cat_attribs),\n",
+    "    ])\n",
+    "\n",
+    "train_set_prepared = full_pipeline.fit_transform(train_set)\n",
+    "# Retransformation en DF pour avoir les noms des colonnes\n",
+    "train_set_prepared_df = pd.DataFrame(train_set_prepared, columns=num_attribs + [\"rooms_per_household\", \"population_per_household\", \"bedrooms_per_room\", \"<1H OCEAN\", \"INLAND\", \"ISLAND\", \"NEAR BAY\", \"NEAR OCEAN\"])"
    ]
   },
   {
