maj: extract data time

--- a/Projet/presentation.ipynb
+++ b/Projet/presentation.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -619,7 +619,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +694,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -864,7 +864,7 @@
        "Name: Age, dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
        "Name: TotalWorkingYears, dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,6 +958,396 @@
     "Les données sont intégrées dans le jeu de données sur le champ **EmployeeID** depuis plusieurs fichier csv : ``employee_survey_data.csv``, ``manager_survey_data.csv``, ``general_data.csv``. \n",
     "\n",
     "Les données des fichiers ``in_time.csv`` et ``out_time.csv`` sont traitées pour obtenir la moyenne de temps de travail par jour pour chaque employé nommé AvgWorkingHours."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Extraire les données de time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def avg_time(df):\n",
+    "    # Set first column as index\n",
+    "    df = df.copy().set_index(df.columns[0])\n",
+    "    # Remove first column\n",
+    "    df = df.copy().transpose()\n",
+    "\n",
+    "    # Convertir les valeurs datetime en valeurs time\n",
+    "    df = df.apply(pd.to_datetime)\n",
+    "    df = df.apply(lambda x: x - x.dt.normalize())\n",
+    "    df = df.mean(skipna=True)\n",
+    "    # Add column EmployeeID\n",
+    "    df = df.to_frame().reset_index()\n",
+    "    df.columns = [\"EmployeeID\", \"AvgTime\"]\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EmployeeID</th>\n",
+       "      <th>AvgTime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0 days 10:00:05.120689655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0 days 09:59:17.063559322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0 days 10:01:30.219008264</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0 days 09:58:54.587234042</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0 days 09:59:54.575510204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4405</th>\n",
+       "      <td>4406</td>\n",
+       "      <td>0 days 10:01:11.242798353</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4406</th>\n",
+       "      <td>4407</td>\n",
+       "      <td>0 days 10:00:15.294605809</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4407</th>\n",
+       "      <td>4408</td>\n",
+       "      <td>0 days 09:58:47.904761904</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4408</th>\n",
+       "      <td>4409</td>\n",
+       "      <td>0 days 10:01:06.767634854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4409</th>\n",
+       "      <td>4410</td>\n",
+       "      <td>0 days 10:01:03.892241379</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4410 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      EmployeeID                   AvgTime\n",
+       "0              1 0 days 10:00:05.120689655\n",
+       "1              2 0 days 09:59:17.063559322\n",
+       "2              3 0 days 10:01:30.219008264\n",
+       "3              4 0 days 09:58:54.587234042\n",
+       "4              5 0 days 09:59:54.575510204\n",
+       "...          ...                       ...\n",
+       "4405        4406 0 days 10:01:11.242798353\n",
+       "4406        4407 0 days 10:00:15.294605809\n",
+       "4407        4408 0 days 09:58:47.904761904\n",
+       "4408        4409 0 days 10:01:06.767634854\n",
+       "4409        4410 0 days 10:01:03.892241379\n",
+       "\n",
+       "[4410 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculer la moyenne d'heure d'arrivée par ligne\n",
+    "avgInTimePerEmployee = avg_time(df_in_time)\n",
+    "\n",
+    "avgInTimePerEmployee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EmployeeID</th>\n",
+       "      <th>AvgTime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0 days 17:22:30.262931034</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0 days 17:42:25.351694915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0 days 17:02:17.884297520</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0 days 17:10:31.829787234</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0 days 18:00:16.804081632</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4405</th>\n",
+       "      <td>4406</td>\n",
+       "      <td>0 days 18:32:31.440329218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4406</th>\n",
+       "      <td>4407</td>\n",
+       "      <td>0 days 16:05:49.929460580</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4407</th>\n",
+       "      <td>4408</td>\n",
+       "      <td>0 days 17:41:11.779220779</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4408</th>\n",
+       "      <td>4409</td>\n",
+       "      <td>0 days 19:30:40.107883817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4409</th>\n",
+       "      <td>4410</td>\n",
+       "      <td>0 days 17:00:24.103448275</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4410 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      EmployeeID                   AvgTime\n",
+       "0              1 0 days 17:22:30.262931034\n",
+       "1              2 0 days 17:42:25.351694915\n",
+       "2              3 0 days 17:02:17.884297520\n",
+       "3              4 0 days 17:10:31.829787234\n",
+       "4              5 0 days 18:00:16.804081632\n",
+       "...          ...                       ...\n",
+       "4405        4406 0 days 18:32:31.440329218\n",
+       "4406        4407 0 days 16:05:49.929460580\n",
+       "4407        4408 0 days 17:41:11.779220779\n",
+       "4408        4409 0 days 19:30:40.107883817\n",
+       "4409        4410 0 days 17:00:24.103448275\n",
+       "\n",
+       "[4410 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 170,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Calculer la moyenne d'heure de départ par ligne\n",
+    "avgOutTimePerEmployee = avg_time(df_out_time)\n",
+    "\n",
+    "avgOutTimePerEmployee"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>EmployeeID</th>\n",
+       "      <th>AvgTime</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0 days 07:22:25.142241379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0 days 07:43:08.288135593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0 days 07:00:47.665289256</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0 days 07:11:37.242553192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0 days 08:00:22.228571428</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4405</th>\n",
+       "      <td>4406</td>\n",
+       "      <td>0 days 08:31:20.197530865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4406</th>\n",
+       "      <td>4407</td>\n",
+       "      <td>0 days 06:05:34.634854771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4407</th>\n",
+       "      <td>4408</td>\n",
+       "      <td>0 days 07:42:23.874458875</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4408</th>\n",
+       "      <td>4409</td>\n",
+       "      <td>0 days 09:29:33.340248963</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4409</th>\n",
+       "      <td>4410</td>\n",
+       "      <td>0 days 06:59:20.211206896</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4410 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      EmployeeID                   AvgTime\n",
+       "0              1 0 days 07:22:25.142241379\n",
+       "1              2 0 days 07:43:08.288135593\n",
+       "2              3 0 days 07:00:47.665289256\n",
+       "3              4 0 days 07:11:37.242553192\n",
+       "4              5 0 days 08:00:22.228571428\n",
+       "...          ...                       ...\n",
+       "4405        4406 0 days 08:31:20.197530865\n",
+       "4406        4407 0 days 06:05:34.634854771\n",
+       "4407        4408 0 days 07:42:23.874458875\n",
+       "4408        4409 0 days 09:29:33.340248963\n",
+       "4409        4410 0 days 06:59:20.211206896\n",
+       "\n",
+       "[4410 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Substract avgInTimePerEmployee from avgOutTimePerEmployee\n",
+    "avgWorkTimePerEmployee = avgOutTimePerEmployee.copy()\n",
+    "avgWorkTimePerEmployee[\"AvgTime\"] = avgOutTimePerEmployee[\"AvgTime\"] - avgInTimePerEmployee[\"AvgTime\"]\n",
+    "avgWorkTimePerEmployee"
    ]
   },
   {
@@ -1024,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
