maj: adding comment to avg_time

--- a/Projet/presentation.ipynb
+++ b/Projet/presentation.ipynb
@@ -975,6 +975,19 @@
    "outputs": [],
    "source": [
     "def avg_time(df):\n",
+    "    '''\n",
+    "    Calculate the average time of in_time and out_time.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pandas.DataFrame\n",
+    "        Dataframe with in_time or out_time.\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    df : pandas.DataFrame\n",
+    "        Dataframe with EmployeeID and AvgTime.\n",
+    "    '''\n",
     "    # Set first column as index\n",
     "    df = df.copy().set_index(df.columns[0])\n",
     "    # Remove first column\n",
